force-app/main/default/objects/Activity/fields/tdc_cti__API_Version__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__API_Version__c</fullName>
    <label>API Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>