force-app/main/default/objects/Activity/fields/tdc_cti__Call_Duration__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Call_Duration__c</fullName>
    <label>Call Duration</label>
    <length>15</length>
    <type>Text</type>
</CustomField>