force-app/main/default/objects/Activity/fields/tdc_cti__Call_From__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Call_From__c</fullName>
    <label>Call From</label>
    <type>Phone</type>
</CustomField>