force-app/main/default/objects/Activity/fields/tdc_cti__Call_Sid__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Call_Sid__c</fullName>
    <label>Call Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>