force-app/main/default/objects/Activity/fields/tdc_cti__Call_Status__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Call_Status__c</fullName>
    <label>Call Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>