force-app/main/default/objects/Activity/fields/tdc_cti__Call_Transferred_Number__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Call_Transferred_Number__c</fullName>
    <label>Call Transferred To</label>
    <type>Phone</type>
</CustomField>