force-app/main/default/objects/Activity/fields/tdc_cti__Call_Type__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Call_Type__c</fullName>
    <label>Call Type</label>
    <length>15</length>
    <type>Text</type>
</CustomField>