force-app/main/default/objects/Activity/fields/tdc_cti__Called_Number__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Called_Number__c</fullName>
    <label>Call To</label>
    <type>Phone</type>
</CustomField>