force-app/main/default/objects/Activity/fields/tdc_cti__Conference_Call_Sid_Ids__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Conference_Call_Sid_Ids__c</fullName>
    <label>Conference Call  Ids</label>
    <type>TextArea</type>
</CustomField>