force-app/main/default/objects/Activity/fields/tdc_cti__Conference_Number__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Conference_Number__c</fullName>
    <label>Conference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>