force-app/main/default/objects/Activity/fields/tdc_cti__Conference_Recording_URL__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Conference_Recording_URL__c</fullName>
    <label>Conference Recording URL</label>
    <type>TextArea</type>
</CustomField>