force-app/main/default/objects/Activity/fields/tdc_cti__Disposition__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Disposition__c</fullName>
    <label>Disposition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>