force-app/main/default/objects/Activity/fields/tdc_cti__IsPlayed__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__IsPlayed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsPlayed</label>
    <type>Checkbox</type>
</CustomField>