force-app/main/default/objects/Activity/fields/tdc_cti__Matching_Phone_API__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Matching_Phone_API__c</fullName>
    <label>Matching Phone API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>