force-app/main/default/objects/Activity/fields/tdc_cti__Recording_URL__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Recording_URL__c</fullName>
    <label>Recording URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>