force-app/main/default/objects/Activity/fields/tdc_cti__Recording_URL_For__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Recording_URL_For__c</fullName>
    <formula>IF(NOT(ISBLANK(tdc_cti__Recording_URL__c)), HYPERLINK(&apos;/apex/tdc_cti__PlayCallRecording_Page?id=&apos;+ Id , &quot;Recording&quot;,&apos;_blank&apos;), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recording Link</label>
    <type>Text</type>
</CustomField>