force-app/main/default/objects/Activity/fields/tdc_cti__Source__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Source__c</fullName>
    <label>Call Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>